[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 31 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 498, 327 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ZonaDisparo" type="Position2D" parent="."]
position = Vector2( 54, 0 )
rotation = -1.5708

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
